--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/nav_home"
-          android:icon="@mipmap/ic_launcher"
-          android:title="@string/nav_home"/>
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@mipmap/home_line"
+        android:title="@string/nav_home"/>
 
-    <item android:id="@+id/nav_bookmark"
-          android:icon="@mipmap/ic_launcher"
-          android:title="@string/nav_bookmark"/>
-    <item android:id="@+id/nav_theme"
-          android:icon="@mipmap/ic_launcher"
-          android:title="@string/nav_theme"/>
-    <item android:id="@+id/nav_setting"
-          android:icon="@mipmap/ic_launcher"
-          android:title="@string/nav_setting"/>
-    <item android:id="@+id/nav_about"
-          android:icon="@mipmap/ic_launcher"
-          android:title="@string/nav_about"/>
+    <item
+        android:id="@+id/nav_bookmark"
+        android:icon="@mipmap/like"
+        android:title="@string/nav_bookmark"/>
+    <item
+        android:id="@+id/nav_theme"
+        android:icon="@mipmap/discovery_2_line"
+        android:title="@string/nav_theme"/>
+    <item
+        android:id="@+id/nav_about"
+        android:icon="@mipmap/help"
+        android:title="@string/nav_about"/>
 
 </menu>
