--- a/app/src/main/res/layout/home_list_item_layout.xml
+++ b/app/src/main/res/layout/home_list_item_layout.xml
@@ -32,9 +32,11 @@
             android:maxLines="3"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/colorPrimary_text"
             android:textSize="18sp"/>
+
         <ImageView
+            android:layout_gravity="center"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/imageView"/>
