--- a/app/src/main/res/layout/home_list_item_layout_noimag.xml
+++ b/app/src/main/res/layout/home_list_item_layout_noimag.xml
@@ -22,7 +22,7 @@
         android:paddingRight="8dp">
 
         <TextView
-            android:id="@+id/textViewTitle"
+            android:id="@+id/textViewTitle1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="8dp"
@@ -34,11 +34,6 @@
             android:paddingTop="8dp"
             android:textColor="@color/colorPrimary_text"
             android:textSize="18sp"/>
-        <ImageView
-            android:layout_gravity="center"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/imageView"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
