--- a/app/src/main/res/layout/list_footer.xml
+++ b/app/src/main/res/layout/list_footer.xml
@@ -4,22 +4,23 @@
               android:layout_height="48dp"
               android:layout_marginBottom="8dp"
               android:layout_marginTop="8dp"
-              android:background="@color/colorAccent"
+              android:background="#fff"
               android:gravity="center_horizontal"
               android:orientation="horizontal">
 
     <android.support.v4.widget.ContentLoadingProgressBar
-        android:id="@+id/address_looking_up"
         style="?android:attr/progressBarStyleInverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="16dp"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary_text"
         android:text="@string/load_more"/>
 </LinearLayout>
