--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="nav_header_height">28dp</dimen>
+    <dimen name="app_bar_height">240dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
 </resources>
